zip/static/style.css
@font-face {
  font-family: FunnelSans;
  font-style: normal;
  font-weight: 400;
  src: url("/static/font/FunnelSans-Regular.ttf") format('ttf');
}

@font-face {
  font-family: FunnelSans;
  font-style: italic;
  font-weight: 400;
  src: url("/static/font/FunnelSans-Italic.ttf") format('ttf');
}

@font-face {
  font-family: Jersey25;
  font-style: normal;
  font-weight: 400;
  src: url("/static/font/Jersey25-Regular.ttf");
}

@font-face {
  font-family: Jersey25Charted;
  font-style: normal;
  font-weight: 400;
  src: url("/static/font/Jersey25Charted-Regular.ttf");
}

* {
  box-sizing: border-box;
  font-family: Jersey25;
  /* font-size: 30px; */
}




table {
  border: 2px solid #b3b3b3;
  background-color: #0000007a;
  border-radius: 5px;
}

td {
  border: 2px solid #727272;
  border-radius: 5px;
}

html {
  scrollbar-color: yellow black;
}

@keyframes scrollbg {
	0% { background-position: 0 0; }
	100% { background-position: 100% 100%; }
}

body{
  background-color: black;
  background-image: url("/static/media/404-static.gif");
  background-attachment: fixed;
  background-size: 65%;
  background-repeat: repeat;
  
  /* animation: scrollbg 100s infinite linear; */

  image-rendering: pixelated;

  color: rgb(255, 255, 255);
  
  /* font-family: 'FunnelSans', sans-serif; */
  /* font-family: Jersey25; */
  font-size: 30px;

  word-wrap: break-word;

  max-width:1224px;

  margin:0 auto;
}

h1, h2, h3, h4, h5, h6 {
  /* font-weight: 400; */
  font-style: italic;

  white-space: collapse;
  max-width: 100%;

  &:before{
    content: "/";
  }
  &:after{
    content: "/";
  }
}

h1 {
  &:before{
    content: "~";
  }
  &:after{
    content: "~";
  }
}

form {
  background-color: #11111178;
  border: 1px solid white;
  border-radius: 5px;
  width:fit-content;
  padding:4px;
}

input, select, option, textarea {
  font-family: Jersey25;
  font-size: 25px;

  border: 1px solid rgb(128, 255, 0);
  color: white;
  background-color: black;

  max-width: 100%;
}

input[type="range"] {
  font-size: revert;
}

.sukuna {
	/* width: 88px;
	height: 31px; */
	image-rendering: pixelated;
	transition: .2s scale cubic-bezier(.075,.82,.165,1);
	cursor: help;
  &:hover {
    animation: shake 0.5s infinite;
    border: 5px solid yellow;
  }
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}

.web-badge{
  /* scale: 500%; */
  width: 176px;
  height: 62px;
  image-rendering: pixelated;

  padding: 0px;

  &:hover {
    animation: shake 0.5s;
    animation-iteration-count: infinite;
  }
}

@media screen and (max-width: 450px) {
  .web-badge{
    width: 145px;
    height: 51.0795px;
  }
}



div.footer{
  color: #c3b0b0;
}


.flex-container{
  display:flex;
  flex-wrap: wrap;
}

.nav-badge img{
  transform: translateY(7px);
  filter: sepia(1) saturate(0);
}

.nav-badge:hover img{
  filter: none;
}

.navbar-container{
  position: relative;
}

#static-navbar{
  position: relative;
  top: 0;
  width: 100%;
  max-width:1224px;
}

.navbar{
  border: 2px solid #2cff00db;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;

  background-color: #165a135e;
  background-blend-mode: color-dodge;
  background-image: url("/static/media/dark_exa.png");
  background-attachment: fixed;
  background-size: 66px;
  background-repeat: repeat;
  
  /* animation: scrollbg 70s infinite linear; */

  margin-top: 2px;
  margin-left: auto;
  padding: 10px;

  /* position: sticky; */
  top: 0;
  z-index: 100;

  user-select: none;

  /* backdrop-filter: blur(1px); */
}

div.navbar a {
  color: #5cff00;
  background-color: #17390db6;

  &:hover {
    background-color: rgb(0, 0, 0);
    color: #5cff00;
  }

}

div.navbar  p {
  margin: 0;
}

#closed-navbar {
  border: 2px solid #ff5401db;
  border-radius: 6px;

  background-color: #5a2e135e;
  background-blend-mode: color-dodge;
  background-image: url("/static/media/dark_exa.png");
  background-attachment: fixed;
  background-size: 66px;
  background-repeat: repeat;

  /* animation: scrollbg 10s infinite linear; */

  right: max(0px, calc((100vw - 1224px) / 2));
  width: fit-content;
  height: fit-content;
  justify-content: right;
  position: fixed;

  margin-top: 2px;
  margin-right: 2px;
  padding: 10px;
  
  display: block;
  justify-content: center;
  z-index: 99;
}

.sukuna-navbar{
  position: fixed;
  top: 0;
  right: max(0px, calc((100vw - 1224px) / 2));
  max-height: 100%;
  overflow-y: scroll;

  border: 2px solid #ff5401db;
  border-radius: 6px;

  background-color: #5a2e135e;
  background-blend-mode: color-dodge;
  background-image: url("/static/media/dark_exa.png");
  background-attachment: fixed;
  background-size: 66px;
  background-repeat: repeat;
  
  /* animation: scrollbg 10s infinite linear; */

  margin-top: 2px;
  margin-right: 2px;
  padding: 10px;

  display: grid;
  justify-content: left;

  user-select: none;

  /* min-width: 15%; */

  z-index: 103;

  /* backdrop-filter: blur(3px); */
}

div.sukuna-navbar a {
  color: rgb(247, 255, 0);

  &:hover {
    background-color: rgb(0, 0, 0);
    color: rgb(247, 255, 0);
  }
}

div.sukuna-navbar p {
  margin: 0;
}

.extras-menu {
  position: fixed;
  /* height: 100%; */
  width: 100%;
  max-height: 50%;
  max-width: 1224px;
  overflow-y: scroll;

  border: 2px solid #ff5401db;
  border-top-right-radius: 6px;
  border-top-left-radius: 6px;

  background-color: #5a2e135e;
  background-blend-mode: color-dodge;
  background-image: url("/static/media/dark_exa.png");
  background-attachment: fixed;
  background-size: 66px;
  background-repeat: repeat;
  
  /* animation: scrollbg 10s infinite linear; */

  padding: 10px;

  /* display: grid; */
  justify-content: left;

  /* min-width: 15%; */

  bottom: 0;
  /* right:0; */
  /* left:0; */
  z-index: 102;

  /* user-select: none; */
}

.musicplayer {
  /* position: fixed; */
  /* bottom: 0; */
  width: 100%;
  /* background: #181818; */
  display: grid;
  align-items: center;
  justify-content: space-around;
  align-content: center;
  /* padding: 10px 20px; */
  box-sizing: border-box;
}

.musicleft {
  /* width: 77%; */
  word-wrap: break-word;
}

.musiccenter {
  /* width: 40%; */
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  /* user-select: none; */
}

.musiccontrols button {
  background: none;
  border: none;
  color: white;
  font-size: 18px;
  cursor: pointer;
  margin: 0 10px;
  &:hover{
    border:none;
  }
}

.musicprogress {
  width: 100%;
  display: flex;
  align-items: center;
  gap: 8px;
}

.musicprogress input[type="range"] {
  flex: 1;
}

.musicright {
  /* width: 20%; */
  text-align: right;
  user-select: none;
}

.navdog{
  transform: translateY(5.0px);

  /* &:hover{
    filter: sepia(0%) hue-rotate(180deg) saturate(300%)
  } */
  
}

button[disabled]{
  background-color: rgb(133, 133, 133);
  color:rgb(50, 50, 50);
  border: 2px solid rgb(50, 50, 50);
  &:hover{
    background-color: rgb(133, 133, 133);
    color:rgb(50, 50, 50);
    border: 2px solid rgb(50, 50, 50);
  }
}

button {
  border: 2px solid #ffffff7a;

  background-color: #37ff0042;
  /* background-blend-mode: color-dodge; */
  /* background-image: url("/static/dark_exa.png"); */
  /* background-attachment: fixed; */
  /* background-size: 66px; */
  /* background-repeat: repeat; */
  
  /* animation: scrollbg 100s infinite linear; */

  border-radius: 5px;

  color: white;
  font-weight: bold;
  font-size: 20px;
  
  padding: 8px;
  margin: 5px;

  transition: 0.3s;

  &:hover{
    border: 2px solid #ffffff7a;
    background-color: #0f2908b5;
    color: rgb(255, 255, 255);
  }
}

div.section{
  border: 2px solid #00e7ffd6;
  padding: 10px;
  justify-content: left;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
  
  background-blend-mode: color-dodge;
  background-color: #321436b0;
  background-image: url("/static/media/dark_exa.png");
  background-attachment: fixed;
  background-size: 66px;
  background-repeat: repeat;

  /* backdrop-filter: blur(1px); */
}

.inner-box{
  background-color: #321436b0;
  
  border: 2px solid #427ad1f2;
  border-radius: 6px;

  margin: 10px;
  padding: 10px;
  display: grid;
  justify-content: left;
  width: fit-content;
  height: fit-content;
}

@keyframes rainbow { 
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}

.static-bg {
  /* background: linear-gradient(124deg, #ff22006d, #e81d1d6d, #e8b91d6d, #e5e81d6c, #1de83f66, #1ddee870, #2b1de877, #df00f36b, #df00f36e); */
  background-color: black;
  background-image: url("/static/media/404-static.gif");
  background-size: 200%;
  /* animation: rainbow 18s ease-out infinite; */
  image-rendering: pixelated;
}


div.lean {
  background-color: #c800ff7a;
  background-blend-mode: color-dodge;
  background-image: url("/static/qr/orion-hotel_lean_artwork.jpg");
  background-attachment: fixed;
  background-size: 80px;
  background-repeat: repeat;
  
  animation: scrollbg 100s infinite linear;
}

video {
  max-width: 100%;
  margin: auto;
}

div.box-flex {
  display: flex;
}

div.box-red-bg {
  background-color: #b016166b;
  border: 2px solid #de1919;
}

div.section img {
  max-width:100%;
  /* height:100%; */

  object-fit: contain;
}

ul{
  margin: 0px;
}

code {
  font-family: Jersey25;
  background-color: #211f1f;
  white-space: pre-wrap;
  word-break: break-word;
  display: grid;
  margin: 5px;
/* 
  padding: 10px;
  max-width: 100%;
*/
  overflow-wrap: anywhere;
  border: 1px solid white;
}

.badge-code {
  max-width: 400px;
  max-height: 100px;
  overflow-y: scroll;
}

.inline{
  display: inline !important;
}

/* For most modern browsers (Chrome, Edge, Safari, Firefox, Opera) */
::selection {
  background-color: #00b7ff69;
  color: rgb(0, 0, 0);
}

/* For compatibility with older Firefox versions */
::-moz-selection {
  background-color: #00b7ff69;
  color: rgb(0, 0, 0);
}

hr {
    width: 100%;
    color:aliceblue;
}
/* 
a[href^="http://"]:after{ 
    content:"\2197";
}
a[href^="https://"]:after{
    content:"\2197";
} 
*/

a {
  word-wrap: break-word;
}

a[target^="_blank"]:after{
    content:"\2197";
}

a:link {
  text-decoration: underline dotted;
  color: rgb(255, 255, 255);
}
a:visited {
  /* text-decoration: dashed; */
  color: rgb(255, 255, 255);
  border-color: hotpink;
}
a:hover{
  text-decoration: underline;
  background-color: white;
  color: black;
}

a:active{
  text-decoration: underline;
  background-color: white;
  color: black;
}

